Mobile: Stuck navbar + prevent scrolling when modal opens

--- a/mobile/src/client/app/core/home/home.component.scss
+++ b/mobile/src/client/app/core/home/home.component.scss
@@ -32,7 +32,7 @@ ul li {
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 2;
+    z-index: 4;
     top: 0;
     left: 0;
     background-color: #707070;
